# JSM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
accounts/: apps.py  models.py  urls.py  webservice.py
accounts/management/commands/: create_admin.py
accounts/migrations/: 0001_initial.py  0002_auto_20190608_1729.py  0003_auto_20190608_1844.py  0004_auto_20190608_1908.py  0005_unique.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20190608_2042.py  0003_auto_20190608_2055.py  0004_post_author.py  0005_post_visible.py
blog/static/css/: main.css  post_detail.css
blog/static/js/: main.js  post_detail.js
blog/templates/: main.html  post_detail.html
config/: dashboard.py  settings.py  urls.py  wsgi.py
config/settings/: development.py
management/: admin.py  apps.py  models.py
management/_admin/: activity.py  assistance.py  dwelling.py  income.py  person.py
management/dashboard/: dashboard.py
management/dashboard/modules/: activity_attendance.py  activity_student.py  people_age.py
management/migrations/: 0001_address.py  0001_change_address.py  0002_dwelling.py  0003_person.py  0004_vcard.py  0005_son.py  0006_income.py  0007_relative.py  0008_alter_relative.py  0009_alter_relative.py  0010_alter_son.py  0011_add_education_stage.py  0012_add_education_stage.py  0013_activity.py  0014_unique.py  dayofweek.py
management/static/js/: generate_material_color.js
management/templates/modules/: activity_attendance.html  activity_student.html  people_age.html
(+1 files in other folders)
