[tool.poetry]
name = "jsm"
version = "0.1.0"
description = "Sistema de gestión para la parroquia JSM en el marco de la materia Arquitectura del Software I de la Universidad Católica de Córdoba."
authors = ["Pitri <franpitri@gmail.com>, Lauti <lm.bringas98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
django-jet = "^1.0"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pycodestyle = "^2.5"
pydocstyle = "^3.0"
pyflakes = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
