[tool.poetry]
name = "jsm"
version = "0.1.0"
description = "Sistema de gestión para la parroquia JSM en el marco de la materia Arquitectura del Software I de la Universidad Católica de Córdoba."
authors = ["Pitri <franpitri@gmail.com>, Lauti <lm.bringas98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
django-jet = "^1.0"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7"
autopep8 = "^1.4"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
